--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
 body {
     padding: 0;
     margin: 0;
     min-height: 100vh;
-}
-
-html {
     background: rgb(255,255,255);
     background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(225,242,255,1) 100%);
 }
